# Cortex

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  PROJECT_STATUS.py  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  START_HERE.sh  cortex-launcher  cortex.desktop  docker-compose.yml  install-app.sh  install.sh  setup-venv.sh  tailscale.sh  verify-setup.sh
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  docker-release.yml  labeler.yml  security.yml  stale.yml
backend/: .env.example  Dockerfile  cortex_env.py  main.py  pyproject.toml  requirements-min.txt  requirements.txt  setup-venv.sh
backend/agents/: cortex.py  dreaming_engine.py  dreaming_engine_real.py  memory_core.py  tool_executor.py
backend/app/integrations/: discord_bot.py  tailscale.py
backend/app/routes/: discord_routes.py  network_routes.py
backend/models/: cortex_memory.py
backend/routers/: analytics.py  audio.py  auths.py  cortex_chat.py  cortex_tools.py  discord.py  dreaming.py  memory.py
backend/test/apps/webui/storage/: test_provider.py
backend/utils/: oauth.py
cli/: Dockerfile  README.md  cortex_cli.py
cli/commands/: __init__.py  chat.py  dreaming.py  memory.py  system.py  tools.py
config/: config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_QUICK_START.md  DESKTOP_APP_GUIDE.md  SETUP_GUIDE.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
scripts/: build.sh  dev.sh  install-deps.sh
(+14 files in other folders)
