[project]
name = "cortex"
version = "1.0.0"
description = "Cortex - Advanced AI Agent Platform with long-term memory, dreaming cycles, and tool execution"
authors = [{name = "AetherAssembly", email = "support@aetherassembly.org"}]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "memory", "cortex", "tools"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastapi>=0.135.0",
  "uvicorn[standard]>=0.41.0",
  "pydantic>=2.12.0",
]
